--- a/src/GIMI-ModManager.WinUI/Views/CharacterManager/CharacterManagerPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterManager/CharacterManagerPage.xaml
@@ -32,6 +32,7 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
@@ -73,9 +74,18 @@
                 </AutoSuggestBox.ItemTemplate>
             </AutoSuggestBox>
 
+            <Button
+                Grid.Column="2"
+                Margin="16,0,0,0"
+                VerticalAlignment="Bottom"
+                Command="{x:Bind ViewModel.OpenCreateCharacterFormCommand}"
+                ToolTipService.ToolTip="Add new character">
+                <FontIcon Glyph="&#xE710;" />
+            </Button>
+
             <InfoBar
                 Title="Experimental Feature"
-                Grid.Column="2"
+                Grid.Column="3"
                 IsClosable="False"
                 IsOpen="True"
                 Message="This feature is experimental and may not work as expected. I can not guarantee that settings will persist between releases for now" />
