--- a/src/GIMI-ModManager.WinUI/Views/Controls/CustomImage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Controls/CustomImage.xaml
@@ -21,6 +21,7 @@
                 Height="40"
                 Command="{x:Bind CopyButtonCommand, Mode=OneWay}"
                 Icon="Copy"
+                Visibility="{x:Bind CopyButtonVisibility, Mode=OneWay}"
                 Text="Copy Image" />
             <MenuFlyoutSeparator />
             <MenuFlyoutSeparator />
