--- a/src/GIMI-ModManager.WinUI/Views/CharacterManager/CreateCharacterPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterManager/CreateCharacterPage.xaml
@@ -3,19 +3,21 @@
     x:Class="GIMI_ModManager.WinUI.Views.CharacterManager.CreateCharacterPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:characterManagerViewModels="using:GIMI_ModManager.WinUI.ViewModels.CharacterManagerViewModels"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views.CharacterManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="CreateCharacterPageName"
     mc:Ignorable="d">
 
     <Grid>
-
 
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
@@ -24,22 +26,32 @@
             </Grid.ColumnDefinitions>
 
 
-            <TextBlock Text="Create Character" />
+            <TextBlock Margin="0,8,0,8" Text="Create Character" />
 
             <ScrollViewer Grid.Row="1" Grid.Column="0">
 
                 <StackPanel Spacing="8">
 
-                    <local:InputWrapper InputFieldViewModel="{x:Bind ViewModel.Form.Image}">
-                        <local:InputWrapper.Input>
-                            <controls:CustomImage
-                                Width="200"
-                                Height="200"
-                                HorizontalAlignment="Left"
-                                ButtonHorizontalAlignment="Left"
-                                ImageUri="{x:Bind ViewModel.Form.Image.Value, Mode=TwoWay}" />
-                        </local:InputWrapper.Input>
-                    </local:InputWrapper>
+                    <StackPanel>
+                        <TextBlock Text="Character Image" />
+                        <local:InputWrapper InputFieldViewModel="{x:Bind ViewModel.Form.Image}">
+                            <local:InputWrapper.Input>
+                                <controls:CustomImage
+                                    Width="300"
+                                    Height="200"
+                                    HorizontalAlignment="Left"
+                                    ButtonHorizontalAlignment="Left"
+                                    ClearButtonCommand="{x:Bind ViewModel.ClearImageCommand}"
+                                    CopyButtonVisibility="Collapsed"
+                                    EditButtonCommand="{x:Bind ViewModel.SelectImageCommand}"
+                                    ImageUri="{x:Bind ViewModel.Form.Image.Value, Mode=TwoWay}"
+                                    IsContextMenuEnabled="True"
+                                    PasteButtonCommand="{x:Bind ViewModel.PasteImageCommand}" />
+                            </local:InputWrapper.Input>
+                        </local:InputWrapper>
+
+                    </StackPanel>
+
 
 
                     <local:InputWrapper InputFieldViewModel="{x:Bind ViewModel.Form.InternalName}">
@@ -104,20 +116,6 @@
                         </local:InputWrapper.Input>
                     </local:InputWrapper>
 
-                    <!--<StackPanel Orientation="Horizontal" Spacing="16">
-                        <ComboBox Header="Element" />
-                        <Button VerticalAlignment="Bottom">
-                            ?
-                        </Button>
-                    </StackPanel>
-
-                    <StackPanel Orientation="Horizontal" Spacing="16">
-                        <ComboBox Header="Class" />
-                        <Button VerticalAlignment="Bottom">
-                            ?
-                        </Button>
-                    </StackPanel>-->
-
                     <local:InputWrapper InputFieldViewModel="{x:Bind ViewModel.Form.Rarity}">
                         <local:InputWrapper.Input>
                             <StackPanel Orientation="Horizontal" Spacing="16">
@@ -136,6 +134,27 @@
                         </local:InputWrapper.Input>
                     </local:InputWrapper>
 
+                    <local:InputWrapper InputFieldViewModel="{x:Bind ViewModel.Form.Element}">
+                        <local:InputWrapper.Input>
+                            <ComboBox
+                                Header="Element"
+                                ItemsSource="{x:Bind ViewModel.Elements}"
+                                SelectedItem="{x:Bind ViewModel.SelectedElement, Mode=TwoWay}" />
+                        </local:InputWrapper.Input>
+                    </local:InputWrapper>
+
+                    <local:InputWrapper InputFieldViewModel="{x:Bind ViewModel.Form.IsMultiMod}">
+                        <local:InputWrapper.Input>
+                            <CheckBox Content="Is Multi Mod" IsChecked="{x:Bind ViewModel.Form.IsMultiMod.Value, Mode=TwoWay}" />
+                        </local:InputWrapper.Input>
+
+                        <local:InputWrapper.HelpInfo>
+                            <TextBlock IsTextSelectionEnabled="True" TextWrapping="WrapWholeWords">
+                                If Checked JASM won't show a warning when multiple mods are enabled for this mod object.
+                            </TextBlock>
+                        </local:InputWrapper.HelpInfo>
+                    </local:InputWrapper>
+
 
 
 
@@ -143,6 +162,7 @@
             </ScrollViewer>
 
             <Grid
+                Grid.Row="1"
                 Grid.Column="1"
                 Margin="8,0"
                 Padding="4"
@@ -164,21 +184,36 @@
                     <TextBlock FontSize="16" Text="Search Keys" />
                     <TextBox
                         Grid.Column="1"
-                        IsEnabled="False"
-                        PlaceholderText="New Key Name..." />
+                        PlaceholderText="New Key Name..."
+                        Text="{x:Bind ViewModel.NewKeyNameInput, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <Button
                         Grid.Column="2"
                         Margin="0,0,20,0"
                         HorizontalAlignment="Right"
-                        Content="Add Search Key"
-                        IsEnabled="False" />
+                        Command="{x:Bind ViewModel.AddNewKeyCommand}"
+                        Content="Add Search Key" />
 
-                    <Button Grid.Column="3" VerticalAlignment="Bottom">
-                        ?
+                    <Button
+                        Grid.Column="3"
+                        VerticalAlignment="Bottom"
+                        Content="?">
+                        <Button.Flyout>
+                            <Flyout>
+                                <Grid MaxWidth="200">
+                                    <TextBlock
+                                        IsTextSelectionEnabled="True"
+                                        TextWrapping="WrapWholeWords"
+                                        Text="JASM uses keys to help improve search functionality. Some characters may have multiple names, so you can add additional name or search terms as Keys" />
+                                </Grid>
+                            </Flyout>
+                        </Button.Flyout>
                     </Button>
                 </Grid>
 
-                <ListView Grid.Row="1" SelectionMode="None">
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{x:Bind ViewModel.Form.Keys.Items, Mode=OneWay}"
+                    SelectionMode="None">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="x:String">
                             <Grid
@@ -198,13 +233,25 @@
                                 <Button
                                     Grid.Column="1"
                                     HorizontalAlignment="Right"
-                                    Content="Remove"
-                                    IsEnabled="False" />
+                                    Command="{Binding ElementName=CreateCharacterPageName, Path=ViewModel.RemoveKeyCommand, Mode=OneWay}"
+                                    CommandParameter="{Binding Mode=OneTime}"
+                                    Content="Remove" />
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
                 </ListView>
+            </Grid>
+
+
+            <Grid Grid.Row="2" Grid.Column="1">
+                <StackPanel
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal"
+                    Spacing="40">
+                    <Button Command="{x:Bind ViewModel.OpenCustomCharacterJsonFileCommand}">Open Json file</Button>
+                    <Button Command="{x:Bind ViewModel.SaveCharacterCommand}">Create Character</Button>
+                </StackPanel>
             </Grid>
 
 
