--- a/src/GIMI-ModManager.WinUI/Views/CharacterManager/CreateCharacterPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterManager/CreateCharacterPage.xaml
@@ -92,11 +92,9 @@
                         </local:InputWrapper.Input>
 
                         <local:InputWrapper.HelpInfo>
-                            <TextBlock
-                                IsTextSelectionEnabled="True"
-                                TextWrapping="WrapWholeWords"
-                                Text="{x:Bind ViewModel.Form.ModFilesName.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <TextBlock IsTextSelectionEnabled="True" TextWrapping="WrapWholeWords">
                                 JASM can in some cases try and determine what character a mod is for. When doing this it uses the ModFilesName text to try and find a mod file with the same name. For example, lets say ModFilesName is 'paimon' then it will match a file with name: PaimonHeadLightMap.dds
+                                Leave empty if you don't want JASM to try and match mod files.
                             </TextBlock>
                         </local:InputWrapper.HelpInfo>
                     </local:InputWrapper>
@@ -195,44 +193,46 @@
                                     <TextBlock
                                         IsTextSelectionEnabled="True"
                                         TextWrapping="WrapWholeWords"
-                                        Text="JASM uses keys to help improve search functionality. Some characters may have multiple names, so you can add additional name or search terms as Keys" />
+                                        Text="JASM uses keys to help improve search functionality. Some characters may have multiple names, so you can add additional name or search terms as Keys." />
                                 </Grid>
                             </Flyout>
                         </Button.Flyout>
                     </Button>
                 </Grid>
 
-                <ListView
-                    Grid.Row="1"
-                    ItemsSource="{x:Bind ViewModel.Form.Keys.Items, Mode=OneWay}"
-                    SelectionMode="None">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="x:String">
-                            <Grid
-                                Margin="0,8"
-                                Padding="4"
-                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                                CornerRadius="4">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    VerticalAlignment="Center"
-                                    FontSize="16"
-                                    IsTextSelectionEnabled="True"
-                                    Text="{Binding Mode=OneWay}" />
-                                <Button
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    Command="{Binding ElementName=CreateCharacterPageName, Path=ViewModel.RemoveKeyCommand, Mode=OneWay}"
-                                    CommandParameter="{Binding Mode=OneTime}"
-                                    Content="Remove" />
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
 
-                </ListView>
+                <StackPanel Grid.Row="1">
+                    <ListView ItemsSource="{x:Bind ViewModel.Form.Keys.Items, Mode=OneWay}" SelectionMode="None">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="x:String">
+                                <Grid
+                                    Padding="4"
+                                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                    ColumnSpacing="32"
+                                    CornerRadius="4">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                        VerticalAlignment="Center"
+                                        FontSize="16"
+                                        IsTextSelectionEnabled="True"
+                                        Text="{Binding Mode=OneWay}" />
+                                    <Button
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        Command="{Binding ElementName=CreateCharacterPageName, Path=ViewModel.RemoveKeyCommand, Mode=OneWay}"
+                                        CommandParameter="{Binding Mode=OneTime}"
+                                        Content="Remove" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <local:InputWrapper InputField="{x:Bind ViewModel.Form.Keys}" />
+                </StackPanel>
+
+
             </Grid>
 
 
