--- a/src/GIMI-ModManager.WinUI/Views/CharacterManager/EditCharacterPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterManager/EditCharacterPage.xaml
@@ -3,6 +3,7 @@
     x:Class="GIMI_ModManager.WinUI.Views.CharacterManager.EditCharacterPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:characterManagerViewModels="using:GIMI_ModManager.WinUI.ViewModels.CharacterManagerViewModels"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
     xmlns:controls1="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -172,6 +173,40 @@
                         FontSize="20"
                         Text="{x:Bind ViewModel.ModsCount, Mode=TwoWay}" />
 
+                    <ListView ItemsSource="{x:Bind ViewModel.Mods}" SelectionMode="None">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="characterManagerViewModels:ModModel">
+                                <Grid
+                                    Padding="4"
+                                    Background="{ThemeResource ControlFillColorSecondaryBrush}"
+                                    ColumnSpacing="16">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        IsTextSelectionEnabled="True"
+                                        ToolTipService.ToolTip="Date Added to JASM"
+                                        Text="{x:Bind DateAdded}" />
+
+                                    <TextBlock
+                                        Grid.Column="0"
+                                        HorizontalAlignment="Left"
+                                        IsTextSelectionEnabled="True"
+                                        TextTrimming="CharacterEllipsis"
+                                        ToolTipService.ToolTip="{x:Bind Path=DisplayName}"
+                                        Text="{x:Bind DisplayName}" />
+
+
+
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
                 </StackPanel>
 
 
@@ -208,37 +243,38 @@
                         Content="Add Search Key" />
                 </Grid>
 
-                <ListView
-                    Grid.Row="1"
-                    ItemsSource="{x:Bind ViewModel.Form.Keys.Items}"
-                    SelectionMode="None">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="x:String">
-                            <Grid
-                                Margin="0,8"
-                                Padding="4"
-                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                                CornerRadius="4">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    VerticalAlignment="Center"
-                                    FontSize="16"
-                                    IsTextSelectionEnabled="True"
-                                    Text="{Binding Mode=OneTime}" />
-                                <Button
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    Command="{Binding ElementName=EditCharacterPageRoot, Path=ViewModel.RemoveKeyCommand, Mode=OneTime}"
-                                    CommandParameter="{Binding Mode=OneTime}"
-                                    Content="Remove" />
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
+                <StackPanel Grid.Row="1">
 
-                </ListView>
+                    <ListView ItemsSource="{x:Bind ViewModel.Form.Keys.Items}" SelectionMode="None">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="x:String">
+                                <Grid
+                                    Padding="4"
+                                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                    ColumnSpacing="32"
+                                    CornerRadius="4">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                        VerticalAlignment="Center"
+                                        FontSize="16"
+                                        IsTextSelectionEnabled="True"
+                                        Text="{Binding Mode=OneTime}" />
+                                    <Button
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        Command="{Binding ElementName=EditCharacterPageRoot, Path=ViewModel.RemoveKeyCommand, Mode=OneTime}"
+                                        CommandParameter="{Binding Mode=OneTime}"
+                                        Content="Remove" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+
+                    </ListView>
+                    <local:InputWrapper InputField="{x:Bind ViewModel.Form.Keys}" />
+                </StackPanel>
             </Grid>
 
 
