--- a/src/GIMI-ModManager.WinUI/Views/Controls/CustomImage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Controls/CustomImage.xaml
@@ -41,7 +41,10 @@
             Width="{Binding ElementName=CustomImageRoot, Path=Width, Mode=OneWay}"
             Height="{Binding ElementName=CustomImageRoot, Path=Height, Mode=OneWay}">
             <Image.Source>
-                <BitmapImage DecodePixelWidth="{Binding ElementName=CustomImageRoot, Path=Width, Mode=OneWay}" UriSource="{x:Bind ImageUri, Mode=OneWay}" />
+                <BitmapImage
+                    CreateOptions="IgnoreImageCache"
+                    DecodePixelWidth="{Binding ElementName=CustomImageRoot, Path=Width, Mode=OneWay}"
+                    UriSource="{x:Bind ImageUri, Mode=OneWay}" />
             </Image.Source>
         </Image>
         <Button
